# education

./: .gitignore  README.md  interpret.cpp  interpret.docx
Interpretator/: a.msh  p2.msh  p3.msh  pr1.msh  t3.msh
Interpretator/tests/: p1.msh  p5.msh  pp1.msh  pp2.msh
c/Chat/: client.c  server.c
c/Parallel/: sor_2d_omp.c
c/Shell/: sh.c
c/UnixCommands/: cat.c  ls.c  mv.c
cpp/Graphics/Task1/align_project/include/: align.h
cpp/Graphics/Task3/include/: empty.h
cpp/Interpretator/tests/: pr.msh  pr2.msh  t1.msh  t4.msh
cpp/StringStack/: main.cpp  string_stack.h  test.txt
delphi/XO/: JCFSettings.cfg  Project1.bdsproj  Project1.dproj  Unit1.dcu  Unit1.pas  Unit1.pas.cbk
lisp/: otchet.txt  zuev.lsp
programs/c/Elavator/: lift.c  pas.c
programs/c/Parallel/: sor_2d.c
programs/c/UnixCommands/: echo.c  pwd.c
programs/cpp/Graphics/Task3/: launch.sh
programs/cpp/Integral/: integral.cpp
programs/cpp/Interpretator/tests/: p4.msh  t2.msh
programs/cpp/StringStack/: Makefile  string_stack.cpp
programs/delphi/XO/: Project1.dof  Project1.identcache  Unit1.dfm  Unit2.pas
programs/haskell/bank-oop/: Bank.xml  bank.cabal  open.sh  stack.yaml
programs/haskell/bank-oop/app/: Main.hs
programs/haskell/bank-oop/src/: Bank.hs  Model.hs
programs/lisp/: zuev.lsp
programs/refal/Interpretator/: Interpretator.ref
programs/refal/Interpretator/tests/: b.txt  c.txt  e.txt  f.txt
programs/yacc/: calc.y  pr.y
refal/Interpretator/tests/: a.txt  d.txt
swift/iOS cource CMC K+/swift1.playground/: Contents.swift
vkr/: CSgraphs.hs  DCSgraph.hs  Tmp.hs
(+21 files in other folders)
