name:           bank
version:        0.1.0.0
author:         Kirill Zuev
maintainer:     kir2207@list.ru
copyright:      2018 Kirill Zuev
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/kirzuev/education/tree/master/programs/haskell/bank-oop

library
  hs-source-dirs:
      src
  ghc-options:
      -Wall -fno-warn-type-defaults
  build-depends:
      base
    , ghcjs-base
    , miso
    , containers
    , extra
  exposed-modules:
      Bank
      Model
  default-language: Haskell2010

executable bank
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , bank
  default-language: Haskell2010
